adding binarization job

--- a/demo/init_index-checkpoint.ipynb
+++ b/demo/init_index-checkpoint.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "id": "89390d54-2c4f-4d99-b888-09b50e12c47b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +17,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!conda install -c conda-forge elasticsearch"
-   ]
-  },
-  {
    "cell_type": "markdown",
+   "id": "54c58ec0-245d-489c-bfb6-521a05add2b5",
    "metadata": {},
    "source": [
     "### Download example data"
@@ -33,16 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "id": "9693c8bf-1922-4896-b66b-b8221d734939",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('data\\\\product_data.csv', <http.client.HTTPMessage at 0x179ba004c10>)"
+       "('data/product_data.csv', <http.client.HTTPMessage at 0x7fd649185358>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "67a8db6e-429f-458d-b5da-ae38b24d3fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "896889b2-f660-4a3f-b2b7-5314d3769452",
    "metadata": {},
    "source": [
     "### Connect to Elasticsearch instance"
@@ -80,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "7ed64f23-4abf-4f96-a2b0-538ddd5bae37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +90,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff396b5a-ecf8-4b3e-becf-22736aafcfbb",
    "metadata": {},
    "source": [
     "## Create elasticsearch index\n",
@@ -102,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "93f35679-cfae-4866-bec1-e1efa76f1f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "304229b9-c544-4305-90ff-44bc1c706783",
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +141,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76039ea0-00ab-401d-bcfe-86fb5ad75c02",
    "metadata": {},
    "source": [
     "### create the index"
@@ -149,6 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "9eb1ddb0-26a9-47d1-896a-cb39cd5dea63",
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "d5b87af3-56e9-418b-b5f6-460258a7249d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +197,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd1f6f30-6ff8-4c48-96ce-78f5d5fdc0e7",
    "metadata": {},
    "source": [
     "## Ingest documents"
@@ -202,6 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "e1ee2202-29c5-47c1-a1d5-13631e85583d",
    "metadata": {},
    "outputs": [
     {
@@ -244,12 +249,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6ab8da2-f210-4a9b-941d-d594cc7388cf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "f69c3d26-d480-47f6-94c0-24d1df3665bf",
    "metadata": {},
    "source": [
     "### Bulk ingest"
@@ -258,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "8a12f942-270d-4d4c-a7e1-6f0bb7ef3eff",
    "metadata": {},
    "outputs": [
     {
@@ -278,6 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "7f232d63-9978-493b-bf4b-2b90f1898340",
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +314,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "393dac3e-96e8-4be3-901e-0e3b8eb4a94d",
    "metadata": {},
    "source": [
     "## Building search function"
@@ -313,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "4e1dc6d8-6a53-425b-984a-e6a100813bba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "3f098429-7eee-4df0-8f2a-4bad34b5ebf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,6 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "cd264dce-1b68-4ac6-ae9a-d1fa6d17d740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "5ee6ef76-e0da-4105-96e9-fc04bd28d7f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,6 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "ca1412ed-4b19-442d-addc-9041b8187b34",
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "220ec0fd-4669-4709-af79-ae7221f2d0d9",
    "metadata": {},
    "outputs": [
     {
@@ -405,6 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6df38c29-c9fb-4d3b-851f-d1acf56706bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,6 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e153c691-e74d-467e-af08-7041b5697ca2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -421,9 +439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "semantic-search",
    "language": "python",
-   "name": "python3"
+   "name": "semantic-search"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
